# roboteam_suite

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  autoRestart.sh  checkout_branch.py  compile_commands.json  conanfile.txt  docker-compose.yaml  main.cpp  pull_request_template.md  quickInstall.sh
cmake_modules/: BuildLibusb.cmake  GetDependencies.cmake
docker/: Dockerfile  Dockerfile.deps_ubuntu_20_04  clone.sh  divider.sh
docker/tests/: roboteam_ai.sh  roboteam_proto.sh  roboteam_utils.sh  roboteam_world.sh
include/: Publisher.h  Subscriber.h  central_utils.hpp  connection.hpp  interface.hpp  module.hpp  modulehandler.hpp  mutex.hpp  server.hpp
include/roboteam_proto/: Channel.h  Publisher.h  Subscriber.h
proto/: DemoRobot.proto  DetectionBall.proto  DetectionFrame.proto  DetectionRobot.proto  Field.proto  FieldCircularArc.proto  FieldLineSegment.proto  GeometryCameraCalibration.proto  GeometryData.proto  GeometryFieldSize.proto  Referee.proto  RobotCommand.proto  RobotData.proto  RobotFeedback.proto  RobotParameters.proto  Setting.proto  State.proto  StringEntry.proto  Vector2f.proto  World.proto  WorldBall.proto  WorldRobot.proto  grSim_Commands.proto  grSim_Packet.proto  grSim_Replacement.proto  messages_robocup_ssl_detection.proto  messages_robocup_ssl_detection_tracked.proto  messages_robocup_ssl_game_controller_common.proto  messages_robocup_ssl_game_event.proto  messages_robocup_ssl_geometry.proto  messages_robocup_ssl_geometry_legacy.proto  messages_robocup_ssl_referee.proto  messages_robocup_ssl_wrapper.proto  messages_robocup_ssl_wrapper_legacy.proto  mimir_robotcommand.proto  ssl_simulation_config.proto  ssl_simulation_control.proto  ssl_simulation_error.proto  ssl_simulation_robot_control.proto  ssl_simulation_robot_feedback.proto
robocup/: Dockerfile  run.sh
roboteam_central_server/: CMakeLists.txt  README.md
roboteam_central_server/include/: modulehandler.hpp  type_traits.hpp
roboteam_central_server/src/: server.cpp
roboteam_central_server/test/: pair_test.cpp  utils.hpp
roboteam_proto/: README.md
roboteam_proto/proto/: World.proto  grSim_Commands.proto  grSim_Packet.proto  grSim_Replacement.proto  messages_robocup_ssl_game_controller_rcon.proto  messages_robocup_ssl_game_controller_rcon_team.proto  messages_robocup_ssl_game_event.proto  messages_robocup_ssl_wrapper_tracked.proto  ssl_simulation_config.proto  ssl_simulation_robot_feedback.proto  ssl_simulation_synchronous.proto
src/: Channel.cpp  Channels.cpp  Publisher.cpp  Subscriber.cpp  server.cpp
test/: PubSubTest.cpp  pair_test.cpp
